ros2_ws/log/build_2025-07-07_19-03-48/serial_robot/stderr.log
  File "/home/robot/ros2_ws/install/serial_robot/lib/python3.12/site-packages/serial_robot/communication_serial.py", line 201
    Método llamado por el temporizador para leer datos del Arduino.
           ^^^^^^^
SyntaxError: invalid syntax

